# BreathDet

./: Makefile  README.md  config.txt  meson.build
gtk/gtkmm-plplot-2.5/: Makefile  Makefile.in  aclocal.m4  config.h  config.h.in  config.h.in~  config.status  configure  configure~  gtkmm-plplot-2.0.pc  gtkmm-plplot.spec  libtool
gtk/gtkmm-plplot-2.5/autom4te.cache/: output.1  output.2  requests  traces.0  traces.1
gtk/gtkmm-plplot-2.5/docs/: Doxyfile  Makefile  Makefile.in
gtk/gtkmm-plplot-2.5/gtkmm-plplot/: Makefile  Makefile.in  gtkmm-plplotconfig.h  libgtkmm-plplot-2.0.la  libgtkmm_plplot_2.0_la-canvas.lo  libgtkmm_plplot_2.0_la-legend.lo  libgtkmm_plplot_2.0_la-plot.lo  libgtkmm_plplot_2.0_la-plot2d.lo  libgtkmm_plplot_2.0_la-plot3d.lo  libgtkmm_plplot_2.0_la-plotcontour.lo  libgtkmm_plplot_2.0_la-plotcontourshades.lo  libgtkmm_plplot_2.0_la-plotdata.lo  libgtkmm_plplot_2.0_la-plotdata2d.lo  libgtkmm_plplot_2.0_la-plotdata2derrorx.lo  libgtkmm_plplot_2.0_la-plotdata2derrorxy.lo  libgtkmm_plplot_2.0_la-plotdata2derrory.lo  libgtkmm_plplot_2.0_la-plotdata3d.lo  libgtkmm_plplot_2.0_la-plotdatahistogram.lo  libgtkmm_plplot_2.0_la-plotdatahistogrambinned.lo  libgtkmm_plplot_2.0_la-plotdatahistogramunbinned.lo  libgtkmm_plplot_2.0_la-plotdataline.lo  libgtkmm_plplot_2.0_la-plotdatapolar.lo  stamp-h2  (+9 more)
lib/: base.h  breath_plot.h  data_processing.h  input_handler.h
src/: base.cpp  breath_plot.cpp  data_processing.cpp  input_handler.cpp  main.cpp  meson.build
src/tests/: inp1.txt  inp2.txt
tests/: example_short-version.xlsm  inp1.txt  inp2.txt
(+44 files in other folders)
